Final release with last fixes

--- a/G-2301-01-P2/man/man3/G-2301-01-P2-ucomm.c.3
+++ b/G-2301-01-P2/man/man3/G-2301-01-P2-ucomm.c.3
@@ -154,7 +154,7 @@ Atiende el comando de usuario UCYCLE\&.
 .PP
 
 .PP
-Definición en la línea 230 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
+Definición en la línea 238 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
 .PP
 Hace referencia a client_socketsnd()\&.
 .SS "void uHelp (char * command)"
@@ -169,7 +169,7 @@ Atiende el comando de usuario UHELP\&.
 .PP
 
 .PP
-Definición en la línea 221 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
+Definición en la línea 229 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
 .SS "void uInvite (char * command)"
 
 .PP
@@ -242,7 +242,7 @@ Atiende el comando de usuario UPRIV\&.
 .PP
 
 .PP
-Definición en la línea 286 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
+Definición en la línea 294 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
 .PP
 Hace referencia a client_socketsnd()\&.
 .SS "void uNames (char * command)"
@@ -317,9 +317,9 @@ Atiende el comando de usuario UPARTALL\&.
 .PP
 
 .PP
-Definición en la línea 323 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
+Definición en la línea 331 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
 .PP
-Hace referencia a client_socketsnd(), uAway(), uCycle(), uInvite(), uJoin(), uKick(), uList(), uMsg(), uNames(), uNick(), uPart(), uPing(), uQuery(), uQuit(), uTopic(), uWho() y uWhoIs()\&.
+Hace referencia a client_socketsnd(), uAway(), uCycle(), uInvite(), uJoin(), uKick(), uList(), uMsg(), uNames(), uNick(), uNotice(), uPart(), uPing(), uQuery(), uQuit(), uTopic(), uWho() y uWhoIs()\&.
 .SS "void uPing (char * command)"
 
 .PP
@@ -347,7 +347,7 @@ Atiende el comando de usuario UPRIV\&.
 .PP
 
 .PP
-Definición en la línea 270 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
+Definición en la línea 278 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
 .PP
 Hace referencia a client_socketsnd()\&.
 .SS "void uQuery (char * command)"
@@ -362,7 +362,7 @@ Atiende el comando de usuario UQUERY\&.
 .PP
 
 .PP
-Definición en la línea 252 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
+Definición en la línea 260 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
 .PP
 Hace referencia a client_socketsnd() y get_unick()\&.
 .SS "void uQuit (char * command)"
@@ -377,7 +377,7 @@ Atiende el comando de usuario UQUIT\&.
 .PP
 
 .PP
-Definición en la línea 306 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
+Definición en la línea 314 del archivo G\-2301\-01\-P2\-ucomm\&.c\&.
 .PP
 Hace referencia a client_socketsnd() y disconnect_client()\&.
 .SS "void uTopic (char * command)"
