--- a/G-2301-01-P2/man/man3/xchat2.c.3
+++ b/G-2301-01-P2/man/man3/xchat2.c.3
@@ -199,9 +199,9 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1240 del archivo xchat2\&.c\&.
+Definición en la línea 1241 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a client_socketsnd(), client_tcpsocket_open(), get_uhost(), get_unick(), rcv_thread(), rtp_rcvpkg() y tcpsocket_close()\&.
+Hace referencia a client_socketsnd(), client_tcpsocket_open(), disconnect_client(), get_uhost(), get_unick(), rcv_thread() y rtp_rcvpkg()\&.
 .SS "void* audiosnd_t (void * d)"
 
 .PP
@@ -219,7 +219,7 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1220 del archivo xchat2\&.c\&.
+Definición en la línea 1221 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a rtp_sndpkg()\&.
 .SS "int client_socketrcv (char * msg, size_t size)"
@@ -323,7 +323,7 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1526 del archivo xchat2\&.c\&.
+Definición en la línea 1524 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a tcpsocket_close()\&.
 .SS "void* fileThread (void * d)"
@@ -343,7 +343,7 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1142 del archivo xchat2\&.c\&.
+Definición en la línea 1143 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a client_socketsnd(), get_uhost(), get_unick(), tcpsocket_accept() y tcpsocket_snd()\&.
 .SS "char* get_uhost ()"
@@ -391,9 +391,9 @@ Definición en la línea 51 del archivo xchat2\&.c\&.
 .PP
 
 .PP
-Definición en la línea 1585 del archivo xchat2\&.c\&.
+Definición en la línea 1584 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a audiorcv_t(), audiosnd_t() y timeout_t()\&.
+Hace referencia a audiorcv_t(), audiosnd_t(), init_ccomm() y timeout_t()\&.
 .SS "void* rcv_thread (void * d)"
 
 .PP
@@ -411,9 +411,9 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1494 del archivo xchat2\&.c\&.
+Definición en la línea 1492 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a client_socketrcv_thread()\&.
+Hace referencia a cdefault() y client_socketrcv_thread()\&.
 .SS "void set_audio_host (char * c)"
 
 .PP
@@ -457,7 +457,7 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1539 del archivo xchat2\&.c\&.
+Definición en la línea 1538 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a client_socketsnd_thread() y disconnect_client()\&.
 .SH "Autor"
