--- a/G-2301-01-P2/man/man3/G-2301-01-P1-daemon.c.3
+++ b/G-2301-01-P2/man/man3/G-2301-01-P1-daemon.c.3
@@ -2,7 +2,9 @@
 .ad l
 .nh
 .SH NAME
-srclib/G-2301-01-P1-daemon.c \- Libreria de creacion de un daemon\&.  
+srclib/G-2301-01-P1-daemon.c \- 
+.PP
+Libreria de creacion de un daemon\&.  
 
 .SH SYNOPSIS
 .br
@@ -21,7 +23,7 @@ srclib/G-2301-01-P1-daemon.c \- Libreria de creacion de un daemon\&.
 .br
 \fC#include <string\&.h>\fP
 .br
-\fC#include 'G\-2301\-01\-P1\-daemon\&.h'\fP
+\fC#include 'G-2301-01-P1-daemon\&.h'\fP
 .br
 
 .SS "Funciones"
@@ -52,10 +54,10 @@ Daniel Perdices daniel.perdices@estudiante.uam.es
 .PP
 
 .PP
-Definición en el archivo \fBG\-2301\-01\-P1\-daemon\&.c\fP\&.
+Definición en el archivo \fBG-2301-01-P1-daemon\&.c\fP\&.
 .SH "Documentación de las funciones"
 .PP 
-.SS "int daemonize (char * srvcid)"
+.SS "int daemonize (char *srvcid)"
 
 .PP
 Crea un servicio daemon identificado\&. 
@@ -72,7 +74,7 @@ DMNOK o DMNERR_* en caso de error
 .PP
 
 .PP
-Definición en la línea 23 del archivo G\-2301\-01\-P1\-daemon\&.c\&.
+Definición en la línea 23 del archivo G-2301-01-P1-daemon\&.c\&.
 .SH "Autor"
 .PP 
 Generado automáticamente por Doxygen para Practica 2 - Redes de Comunicaciones II del código fuente\&.
