--- a/G-2301-01-P2/man/man3/G-2301-01-P1-tools.c.3
+++ b/G-2301-01-P2/man/man3/G-2301-01-P1-tools.c.3
@@ -2,12 +2,14 @@
 .ad l
 .nh
 .SH NAME
-srclib/G-2301-01-P1-tools.c \- Libreria de utilidades\&.  
+srclib/G-2301-01-P1-tools.c \- 
+.PP
+Libreria de utilidades\&.  
 
 .SH SYNOPSIS
 .br
 .PP
-\fC#include 'G\-2301\-01\-P1\-tcp\&.h'\fP
+\fC#include 'G-2301-01-P1-tcp\&.h'\fP
 .br
 \fC#include <stdio\&.h>\fP
 .br
@@ -54,10 +56,10 @@ Daniel Perdices daniel.perdices@estudiante.uam.es
 .PP
 
 .PP
-Definición en el archivo \fBG\-2301\-01\-P1\-tools\&.c\fP\&.
+Definición en el archivo \fBG-2301-01-P1-tools\&.c\fP\&.
 .SH "Documentación de las funciones"
 .PP 
-.SS "size_t _strlen (const char * s)"
+.SS "size_t _strlen (const char *s)"
 
 .PP
 Abre un socket TCP para servidor\&. 
@@ -76,7 +78,7 @@ TCPOK si todo funciono correctamente TCPERR_ARGS/SOCKET/BIND/LISTEN en caso de e
 .PP
 
 .PP
-Definición en la línea 25 del archivo G\-2301\-01\-P1\-tools\&.c\&.
+Definición en la línea 25 del archivo G-2301-01-P1-tools\&.c\&.
 .SH "Autor"
 .PP 
 Generado automáticamente por Doxygen para Practica 2 - Redes de Comunicaciones II del código fuente\&.
