--- a/G-2301-01-P2/man/man3/IRCInterfaceCallbacks.3
+++ b/G-2301-01-P2/man/man3/IRCInterfaceCallbacks.3
@@ -1,8 +1,9 @@
-.TH "IRCInterfaceCallbacks" 3 "Miércoles, 20 de Abril de 2016" "Practica 2 - Redes de Comunicaciones II" \" -*- nroff -*-
+.TH "Callbaks del interfaz" 3 "Miércoles, 20 de Abril de 2016" "Practica 2 - Redes de Comunicaciones II" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-IRCInterfaceCallbacks \- Callbaks del interfazFunciones que van a ser llamadas desde el interface y que deben ser implementadas por el usuario\&. Todas estas funciones pertenecen al hilo del interfaz\&.
+Callbaks del interfaz \- 
+Funciones que van a ser llamadas desde el interface y que deben ser implementadas por el usuario\&. Todas estas funciones pertenecen al hilo del interfaz\&.
 .PP
 El programador puede, por supuesto, separar todas estas funciones en múltiples ficheros a efectos de desarrollo y modularización\&.
 .PP
