--- a/G-2301-01-P2/man/man3/xchat2.c.3
+++ b/G-2301-01-P2/man/man3/xchat2.c.3
@@ -2,24 +2,25 @@
 .ad l
 .nh
 .SH NAME
-src/xchat2.c \- Programa principal del cliente IRC\&.  
+src/xchat2.c \- 
+Programa principal del cliente IRC\&.  
 
 .SH SYNOPSIS
 .br
 .PP
 \fC#include <redes2/ircxchat\&.h>\fP
 .br
-\fC#include <G\-2301\-01\-P2\-client\&.h>\fP
+\fC#include <G-2301-01-P2-client\&.h>\fP
 .br
-\fC#include <G\-2301\-01\-P2\-ucomm\&.h>\fP
+\fC#include <G-2301-01-P2-ucomm\&.h>\fP
 .br
-\fC#include <G\-2301\-01\-P2\-ccomm\&.h>\fP
+\fC#include <G-2301-01-P2-ccomm\&.h>\fP
 .br
-\fC#include <G\-2301\-01\-P1\-tools\&.h>\fP
+\fC#include <G-2301-01-P1-tools\&.h>\fP
 .br
-\fC#include <G\-2301\-01\-P1\-tcp\&.h>\fP
+\fC#include <G-2301-01-P1-tcp\&.h>\fP
 .br
-\fC#include <G\-2301\-01\-P2\-rtp\&.h>\fP
+\fC#include <G-2301-01-P2-rtp\&.h>\fP
 .br
 \fC#include <syslog\&.h>\fP
 .br
@@ -140,7 +141,7 @@ Daniel Perdices daniel.perdices@estudiante.uam.es
 Definición en el archivo \fBxchat2\&.c\fP\&.
 .SH "Documentación de las funciones"
 .PP 
-.SS "int _client_socketrcv (char * msg, size_t size)"
+.SS "int _client_socketrcv (char *msg, size_tsize)"
 
 .PP
 Recibe el comando en msg\&. 
@@ -159,10 +160,10 @@ Ningun valor concreto
 .PP
 
 .PP
-Definición en la línea 152 del archivo xchat2\&.c\&.
+Definición en la línea 153 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a tcpsocket_rcv()\&.
-.SS "int _client_socketsnd (char * msg)"
+.SS "int _client_socketsnd (char *msg)"
 
 .PP
 Envia el comando del cliente\&. Es segura para concurrencia\&. 
@@ -179,10 +180,10 @@ Ningun valor concreto
 .PP
 
 .PP
-Definición en la línea 139 del archivo xchat2\&.c\&.
+Definición en la línea 140 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a tcpsocket_snd()\&.
-.SS "void* audiorcv_t (void * d)"
+.SS "void* audiorcv_t (void *d)"
 
 .PP
 Recibe y reproduce audio para la funcionalidad de chat de voz\&. 
@@ -199,10 +200,10 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1241 del archivo xchat2\&.c\&.
+Definición en la línea 1244 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a client_socketsnd(), client_tcpsocket_open(), disconnect_client(), get_uhost(), get_unick(), rcv_thread() y rtp_rcvpkg()\&.
-.SS "void* audiosnd_t (void * d)"
+Hace referencia a rtp_rcvpkg()\&.
+.SS "void* audiosnd_t (void *d)"
 
 .PP
 Graba y envia audio para la funcionalidad de chat de voz\&. 
@@ -219,10 +220,10 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1221 del archivo xchat2\&.c\&.
+Definición en la línea 1222 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a rtp_sndpkg()\&.
-.SS "int client_socketrcv (char * msg, size_t size)"
+.SS "int client_socketrcv (char *msg, size_tsize)"
 
 .PP
 Recibe el comando en msg\&. 
@@ -241,10 +242,10 @@ Ningun valor concreto
 .PP
 
 .PP
-Definición en la línea 186 del archivo xchat2\&.c\&.
+Definición en la línea 187 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a _client_socketrcv()\&.
-.SS "int client_socketrcv_thread (char * msg, size_t size)"
+.SS "int client_socketrcv_thread (char *msg, size_tsize)"
 
 .PP
 Recibe el comando en msg\&. 
@@ -263,10 +264,10 @@ Ningun valor concreto
 .PP
 
 .PP
-Definición en la línea 199 del archivo xchat2\&.c\&.
+Definición en la línea 200 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a _client_socketrcv(), client_socketsnd() y get_unick()\&.
-.SS "int client_socketsnd (char * msg)"
+Hace referencia a _client_socketrcv()\&.
+.SS "int client_socketsnd (char *msg)"
 
 .PP
 Envia el comando del cliente\&. Es segura para concurrencia\&. 
@@ -283,10 +284,10 @@ Ningun valor concreto
 .PP
 
 .PP
-Definición en la línea 165 del archivo xchat2\&.c\&.
+Definición en la línea 166 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a _client_socketsnd()\&.
-.SS "int client_socketsnd_thread (char * msg)"
+.SS "int client_socketsnd_thread (char *msg)"
 
 .PP
 Envia el comando del cliente\&. Es segura para concurrencia y es la version para ser llamada desde hilos\&. 
@@ -303,7 +304,7 @@ Ningun valor concreto
 .PP
 
 .PP
-Definición en la línea 175 del archivo xchat2\&.c\&.
+Definición en la línea 176 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a _client_socketsnd()\&.
 .SS "void disconnect_client ()"
@@ -323,10 +324,10 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1524 del archivo xchat2\&.c\&.
+Definición en la línea 1542 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a tcpsocket_close()\&.
-.SS "void* fileThread (void * d)"
+.SS "void* fileThread (void *d)"
 
 .PP
 El hilo del envio de fichero\&. 
@@ -343,9 +344,9 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1143 del archivo xchat2\&.c\&.
+Definición en la línea 1144 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a client_socketsnd(), get_uhost(), get_unick(), tcpsocket_accept() y tcpsocket_snd()\&.
+Hace referencia a tcpsocket_accept() y tcpsocket_snd()\&.
 .SS "char* get_uhost ()"
 
 .PP
@@ -358,7 +359,7 @@ el host
 .PP
 
 .PP
-Definición en la línea 89 del archivo xchat2\&.c\&.
+Definición en la línea 90 del archivo xchat2\&.c\&.
 .SS "char* get_unick ()"
 
 .PP
@@ -371,8 +372,8 @@ el nick
 .PP
 
 .PP
-Definición en la línea 51 del archivo xchat2\&.c\&.
-.SS "int main (int argc, char * argv[])"
+Definición en la línea 52 del archivo xchat2\&.c\&.
+.SS "int main (intargc, char *argv[])"
 
 .PP
 : Funcion principal del programa MMMMMMMMMM MMMMM AAAAAAA IIIIIII NNNNNNNNNN NNNNNN MMMMMMMMMM MMMMM AAAAAAAA IIIII NNNNNNNNNN NNNN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAA AA III NNNNN NNNN NN MMMMM MMMM MM MM AAAAAAAAAAAAAA III NNNNN NNNN NN MMMMM MMMMM MM AAAAA AA III NNNNN NNNN NN MMMMM MMM MM AAAAA AA III NNNNN NNNN NN MMMMM MM AAAAA AA III NNNNN NNNN NN MMMMM MM AAAAA AA III NNNNN NNNN NN MMMMMMM MMMM AAAAAA AAAA IIIII NNNNNN NNNNNNN MMMMMMMMM MMMMMM AAAAAAAA AAAAAA IIIIIII NNNNNNN NNNNNNN 
@@ -391,10 +392,10 @@ Definición en la línea 51 del archivo xchat2\&.c\&.
 .PP
 
 .PP
-Definición en la línea 1584 del archivo xchat2\&.c\&.
+Definición en la línea 1599 del archivo xchat2\&.c\&.
 .PP
-Hace referencia a audiorcv_t(), audiosnd_t(), init_ccomm() y timeout_t()\&.
-.SS "void* rcv_thread (void * d)"
+Hace referencia a init_ccomm() y timeout_t()\&.
+.SS "void* rcv_thread (void *d)"
 
 .PP
 Recibe y atiende comandos IRC\&. 
@@ -411,10 +412,10 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1492 del archivo xchat2\&.c\&.
+Definición en la línea 1510 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a cdefault() y client_socketrcv_thread()\&.
-.SS "void set_audio_host (char * c)"
+.SS "void set_audio_host (char *c)"
 
 .PP
 Configura el host destino de la comunicacion de audio\&. 
@@ -426,8 +427,8 @@ Configura el host destino de la comunicacion de audio\&.
 .PP
 
 .PP
-Definición en la línea 66 del archivo xchat2\&.c\&.
-.SS "void set_audio_port (unsigned long p)"
+Definición en la línea 67 del archivo xchat2\&.c\&.
+.SS "void set_audio_port (unsigned longp)"
 
 .PP
 Configura el puerto destino de la comunicacion de audio\&. 
@@ -439,8 +440,8 @@ Configura el puerto destino de la comunicacion de audio\&.
 .PP
 
 .PP
-Definición en la línea 74 del archivo xchat2\&.c\&.
-.SS "void* timeout_t (void * a)"
+Definición en la línea 75 del archivo xchat2\&.c\&.
+.SS "void* timeout_t (void *a)"
 
 .PP
 Hilo de timeout\&. 
@@ -457,7 +458,7 @@ NULL
 .PP
 
 .PP
-Definición en la línea 1538 del archivo xchat2\&.c\&.
+Definición en la línea 1556 del archivo xchat2\&.c\&.
 .PP
 Hace referencia a client_socketsnd_thread() y disconnect_client()\&.
 .SH "Autor"
